fix: z-index fixes (#421)

--- a/src/components/PositionedOverlay/PositionedOverlay.scss
+++ b/src/components/PositionedOverlay/PositionedOverlay.scss
@@ -1,6 +1,6 @@
 .PositionedOverlay {
   position: absolute;
-  z-index: 9999;
+  z-index: 200;
 }
 
 .fixed {
